fix alignment

--- a/app/assets/stylesheets/companies.sass
+++ b/app/assets/stylesheets/companies.sass
@@ -199,7 +199,7 @@
 
 
 .edit_company, .add_subscription
-  width: 58%
+  width: 80%
   margin: 0 auto 
   
   textarea
